log
Sun Apr 10 20:57:09 HSP 2022: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     new->buckets = (Pair *) calloc(capacity, sizeof(Pair));
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
28611ca
